--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.29.0",
     "googleapis": "^170.1.0",
     "lucide-react": "^0.562.0",
