--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.89",
+    "canvas": "^3.2.1",
     "classnames": "^2.5.1",
     "framer-motion": "^12.29.0",
     "googleapis": "^170.1.0",
