--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@napi-rs/canvas": "^0.1.89",
     "canvas": "^3.2.1",
     "classnames": "^2.5.1",
+    "firebase": "^12.9.0",
     "framer-motion": "^12.29.0",
     "googleapis": "^170.1.0",
     "lucide-react": "^0.562.0",
